--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.2",
     "bootstrap-sass": "^3.3.7",
     "dotenv": "^4.0.0",
+    "dragula": "^3.7.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "knex": "^0.14.1",
