--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "local": "./node_modules/.bin/nodemon --ignore public/",
+    "start": "node server/server.js",
+    "local": "./node_modules/.bin/nodemon server/server.js --ignore public/",
     "knex": "./node_modules/.bin/knex"
   },
   "author": "Lighthouse Labs",
